[gd_scene load_steps=13 format=1]

[ext_resource path="res://overmap1.gd" type="Script" id=1]
[ext_resource path="res://art/spacebg1.png" type="Texture" id=2]
[ext_resource path="res://art/star1.png" type="Texture" id=3]
[ext_resource path="res://art/star2.png" type="Texture" id=4]
[ext_resource path="res://art/reticle.png" type="Texture" id=5]
[ext_resource path="res://art/buttons3.png" type="Texture" id=6]
[ext_resource path="res://art/ui1.png" type="Texture" id=7]
[ext_resource path="res://art/ship1.png" type="Texture" id=8]
[ext_resource path="res://art/ui2.png" type="Texture" id=9]
[ext_resource path="res://art/font1.fnt" type="BitmapFont" id=10]
[ext_resource path="res://art/buttons4.png" type="Texture" id=11]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 5 ), null ],
"loop": true,
"name": "default",
"speed": 1.5
} ]

[node name="root" type="Node2D"]

script/script = ExtResource( 1 )

[node name="bg" type="Sprite" parent="."]

texture = ExtResource( 2 )
centered = false

[node name="node1" type="TextureButton" parent="bg"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 101.0
margin/top = 429.0
margin/right = 170.0
margin/bottom = 506.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 3 )
textures/hover = ExtResource( 3 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="node2" type="TextureButton" parent="bg"]

rect/rotation = -46.3329
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 462.0
margin/top = 340.0
margin/right = 531.0
margin/bottom = 417.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 3 )
textures/hover = ExtResource( 3 )
params/resize_mode = 0
params/stretch_mode = 0
params/modulate = Color( 0.753906, 0.809662, 1, 1 )

[node name="node3" type="TextureButton" parent="bg"]

rect/rotation = 67.6597
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 544.0
margin/top = 196.0
margin/right = 613.0
margin/bottom = 273.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 3 )
textures/hover = ExtResource( 3 )
params/resize_mode = 0
params/stretch_mode = 0
params/modulate = Color( 0.952698, 0.757813, 1, 1 )

[node name="node4" type="TextureButton" parent="bg"]

rect/rotation = -30.0435
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 574.0
margin/top = 673.0
margin/right = 643.0
margin/bottom = 750.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 3 )
textures/hover = ExtResource( 3 )
params/resize_mode = 0
params/stretch_mode = 0
params/modulate = Color( 0.983978, 0.707031, 1, 1 )

[node name="node5" type="TextureButton" parent="bg"]

rect/rotation = 67.6597
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 901.0
margin/top = 605.0
margin/right = 970.0
margin/bottom = 682.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 3 )
textures/hover = ExtResource( 3 )
params/resize_mode = 0
params/stretch_mode = 0
params/modulate = Color( 0.535156, 1, 0.923737, 1 )

[node name="node6" type="TextureButton" parent="bg"]

rect/rotation = 67.6597
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1029.0
margin/top = 262.0
margin/right = 1098.0
margin/bottom = 339.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 3 )
textures/hover = ExtResource( 3 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="node7" type="TextureButton" parent="bg"]

rect/rotation = -30.5127
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 766.0
margin/top = 308.0
margin/right = 835.0
margin/bottom = 385.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 3 )
textures/hover = ExtResource( 3 )
params/resize_mode = 0
params/stretch_mode = 0
params/modulate = Color( 1, 0.878418, 0.8125, 1 )

[node name="node8" type="TextureButton" parent="bg"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1168.0
margin/top = 501.0
margin/right = 1237.0
margin/bottom = 578.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 3 )
textures/hover = ExtResource( 3 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="star1" type="TextureButton" parent="bg"]

rect/rotation = 67.6597
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1326.0
margin/top = 420.0
margin/right = 1419.0
margin/bottom = 520.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
textures/pressed = ExtResource( 4 )
textures/hover = ExtResource( 4 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="reticle" type="AnimatedSprite" parent="bg"]

transform/pos = Vector2( 139, 466 )
frames = SubResource( 1 )
animation = "default"
frame = 1
playing = true

[node name="UI" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="hbutton" type="TextureButton" parent="UI"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1.0
margin/top = 1.0
margin/right = 299.2
margin/bottom = 115.1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
textures/pressed = ExtResource( 6 )
textures/hover = ExtResource( 6 )
params/resize_mode = 0
params/scale = Vector2( 0.7, 0.7 )
params/stretch_mode = 0

[node name="uibg" type="Sprite" parent="UI"]

transform/pos = Vector2( 800, 1051 )
texture = ExtResource( 7 )

[node name="ship" type="Sprite" parent="UI"]

transform/pos = Vector2( 1279, 965 )
texture = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="UI"]

transform/pos = Vector2( 303, 1011 )
texture = ExtResource( 9 )

[node name="pop" type="RichTextLabel" parent="UI/Sprite"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 53.0
margin/top = -3.0
margin/right = 222.0
margin/bottom = 70.0
custom_fonts/normal_font = ExtResource( 10 )
custom_colors/default_color = Color( 0.0361328, 0, 0.289063, 1 )
bbcode/enabled = true
bbcode/bbcode = "9.2e15"
visible_characters = -1

[node name="pop1" type="RichTextLabel" parent="UI/Sprite"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 50.0
margin/top = -79.0
margin/right = 219.0
margin/bottom = -6.0
custom_fonts/normal_font = ExtResource( 10 )
custom_colors/default_color = Color( 0.0361328, 0, 0.289063, 1 )
bbcode/enabled = true
bbcode/bbcode = "8"
visible_characters = -1

[node name="launcher" type="TextureButton" parent="UI"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 581.0
margin/top = 894.0
margin/right = 993.0
margin/bottom = 1130.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 11 )
textures/pressed = ExtResource( 11 )
textures/hover = ExtResource( 11 )
params/resize_mode = 0
params/stretch_mode = 0

[connection signal="pressed" from="bg/node1" to="." method="_on_node1_pressed"]

[connection signal="pressed" from="bg/node2" to="." method="_on_node2_pressed"]

[connection signal="pressed" from="bg/node3" to="." method="_on_node3_pressed"]

[connection signal="pressed" from="bg/node4" to="." method="_on_node4_pressed"]

[connection signal="pressed" from="bg/node5" to="." method="_on_node5_pressed"]

[connection signal="pressed" from="bg/node6" to="." method="_on_node6_pressed"]

[connection signal="pressed" from="bg/node7" to="." method="_on_node7_pressed"]

[connection signal="pressed" from="bg/node8" to="." method="_on_node8_pressed"]

[connection signal="pressed" from="bg/star1" to="." method="_on_star1_pressed"]

[connection signal="pressed" from="UI/hbutton" to="." method="_on_hbutton_pressed"]

[connection signal="pressed" from="UI/launcher" to="." method="_on_launcher_pressed"]


